fix_output.txt
Fixed line 415
Traceback (most recent call last):
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Fixed line 521
Done!
  File "C:\Users\Administrator\.openclaw\workspace-ips-maker\skills\self-media-auto\fix_all_bad_lines.py", line 91, in <module>
    ast.parse(f.read())
  File "C:\Users\Administrator\AppData\Local\Programs\Python\Python310\lib\ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 521
    """鍙戦\u20ac佹枃鏈\ue101秷鎭?""
         ^
SyntaxError: invalid character '\u20ac' (U+20AC)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\Administrator\.openclaw\workspace-ips-maker\skills\self-media-auto\fix_all_bad_lines.py", line 94, in <module>
    print(f'WARNING: Still has error at line {e.lineno}: {e.msg}')
UnicodeEncodeError: 'gbk' codec can't encode character '\u20ac' in position 57: illegal multibyte sequence
